SERVER-95763 checkMetadataConsistency can trigger tripwire 9089900 during collection metadata validation on chunk metadata inconsistency (#28105)

GitOrigin-RevId: 33caefd904ffd631f705bff82042f8d422b413af