src/mongo/db/s/metadata_consistency_util.cpp
@@ -811,7 +811,12 @@ std::vector<MetadataInconsistencyItem> checkCollectionMetadataConsistencyAcrossS
         AggregateCommandRequest aggRequest{nss, getRawPipelineStages(nss)};
 
         std::vector<BSONObj> facetedResult = _runExhaustiveAggregation(
-            opCtx, nss, aggRequest, "Check collection options consistency across shards"_sd);
+            opCtx, nss, aggRequest, "Check collection metadata consistency across shards"_sd);
+
+        // Even though the last stage of the aggregation is a $facet, the aggregation runner will
+        // return an empty vector if aggregation fails due to an inconsistency reported elsewhere.
+        if (facetedResult.empty())
+            continue;
         tassert(9089900,
                 "Expected collection metadata consistency check aggregation to return one document",
                 facetedResult.size() == 1);
